--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -11,16 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-        <ImageView
-            android:id="@+id/back"
-            android:layout_marginStart="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:padding="20dp"
-            android:src="@drawable/ic_back_bk"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:layout_width="match_parent"
@@ -30,44 +20,80 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_marginTop="30dp"
-            android:text="Quản lý"
-            android:textColor="@color/black"
-            android:textSize="30dp"
+        <ImageView
+            android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:padding="20dp"
+            android:src="@drawable/ic_back_bk"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="Loại bàn "
+            android:textColor="@color/black"
+            android:textSize="30dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/tv_table"
+            android:id="@+id/tv_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
-            android:text="Chọn bàn"
+            android:text="Bi-a 8 bi"
             android:textColor="@color/black"
             android:textSize="30dp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@id/tv_stick"
-            app:layout_constraintStart_toStartOf="@id/tv_stick"
+            app:layout_constraintEnd_toEndOf="@id/tv_2"
+            app:layout_constraintStart_toStartOf="@id/tv_2"
             app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
         <Button
-            android:id="@+id/tv_stick"
+            android:id="@+id/tv_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Chọn loại gậy"
+            android:layout_marginTop="50dp"
+            android:text="Bi-a Cushion caroms"
             android:textColor="@color/black"
             android:textSize="30dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_table" />
+            app:layout_constraintTop_toBottomOf="@id/tv_1" />
+
+        <Button
+            android:id="@+id/tv_yes"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="OK"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            app:layout_constraintRight_toLeftOf="@id/tv_no"
+            app:layout_constraintStart_toStartOf="@id/tv_2"
+            app:layout_constraintTop_toBottomOf="@id/tv_2" />
+
+        <Button
+            android:id="@+id/tv_no"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="NO"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@id/tv_2"
+            app:layout_constraintLeft_toRightOf="@id/tv_yes"
+            app:layout_constraintTop_toBottomOf="@id/tv_2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
